[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
lazy_static = "1"
strum = { version = "0.22", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.10"
pathfinding = "3"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1